--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     src: url("/fonts/mono.woff") format(woff);
 }
 
+html{
+    font-family: sans-serif;
+}
+
 body {
     background-color: #363636;
     margin: 0;
@@ -11,33 +15,63 @@ body {
 h1 {
     color: white;
     font-size: 72px;
-    font-family: "mono100";
+    font-family: "mono100",sans-serif;
+    margin: 20;
+    margin: 15px;
+    width: 520px;
 }
 
 p {
     font-size: 20px;
     color: white;
+    margin: 15px;
 }
 
 .header {
     display: flex;
-    height: 100%;
     background-color:#2F2F2F;
-    width:auto;
-    position: relative;
     margin: 0px;
-    padding: 0px;
     font-size: 24px;
-    align-items: center;
+    
     box-shadow: 0px -20px 60px;
-}
-
-.header >div{
-    width:150px;
-    position: relative;
+    justify-content: space-between;
     
 }
 
-.right{
-    margin-right :auto;
+.header > div{
+    margin: 0 15px;
+    display: flex;
+    border-right: solid rgba(192, 192, 192, 0.2);
+    border-width: 1px;
+    cursor: pointer;
+    align-items: center;
+    
+}
+
+.header > div:focus{
+    opacity: 0.9;
+}
+
+.header > div.right{
+   margin-left: auto;
+   border-left: solid rgba(192, 192, 192, 0.2);
+    border-width: 1px;
+}
+
+.Layer1{
+    position:absolute; left:100px; top: 340px; width: 100%; z-index:2
+}
+
+.Layer2{
+    position:absolute; left:50px; top:350px; width:100%; z-index:1
+}
+
+.miniatures{
+    border: solid 15px; width: 100px; height: 100px;
+    margin: 15px;
+    display: block;
+}
+
+.img-miniature{
+    display: flex;
 }
