--- a/style.css
+++ b/style.css
@@ -40,9 +40,13 @@ p {
     font-family: 'Montserrat', sans-serif;
 }
 
-p > a{
+.partie-de-droite h3 {
+    margin-top: 30px;
+}
+
+.partie-de-droite h3 + p {
     font-size: 48px;
-    color: #ff2323;
+    color: #363636;
     margin: 15px;
     font-family: 'Montserrat', sans-serif;
 }
@@ -52,9 +56,11 @@ p > a{
     background-color:#2F2F2F;
     margin: 0px;
     font-size: 24px;
+    height: 99px;
     
     box-shadow: 0px -20px 60px;
     justify-content: space-between;
+    z-index: 15;
     
 }
 
@@ -79,21 +85,41 @@ p > a{
 }
 
 .Layer1{
-    position:absolute; left:100px; top: 340px; width: 100%; z-index:-1
+    position: relative;
+    background-image: linear-gradient(145deg, black, transparent);
+    border-radius: 50%;
+    flex: 1 1 auto;
 }
 
-.Layer2{
-    position:absolute; left:50px; top:350px; width:100%; z-index:-2
+.Layer1::before {
+    content: '';
+    display: block;
+    padding-top: 100%;
 }
+
+.Layer1 img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+
 
 .miniatures{
     border: solid 15px; width: 100px; height: 100px;
     margin: 15px;
     display: block;
+    margin-left: auto;
 }
 
 .img-miniature{
     display: flex;
+    flex: 1 1 auto;
+    align-items: center;
+
 }
 
 .texte{
@@ -106,6 +132,9 @@ p > a{
     background-color: #FF4040;
     height: 938px;
     width: 537px;
+    flex: 0 1 0;
+    box-shadow: -5px 5px 40px;
+    z-index: 1;
 }
 
 .partie-de-droite > div{
@@ -115,5 +144,50 @@ p > a{
 .haut-de-page{
     display: flex;
     justify-content: space-between;
-    margin: 15px;
+    margin: 15px 0;
+}
+
+.cercle-noir{
+    background:#272727;
+    width:43px;
+}
+
+.cercle-blanc{
+    background:#F3F3F3;
+    width:43px;
+}
+
+.cercle-rouge{
+    background:#C90000;
+    width:43px;
+}
+
+video{
+    margin-right: auto;
+    margin-left: auto;
+    object-fit: contain;
+    border-radius: 5%;
+}
+
+.Layer1::before{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 10%;
+}
+
+.bouton{
+    border: solid;
+    width: 298px;
+    height: 73px;
+    color: white;
+    fill: white;
+    border-radius: 25%;
+}
+
+.specification1{
+    font-size: 35;
 }
