--- a/style.css
+++ b/style.css
@@ -60,7 +60,8 @@ p {
     height: 99px;
     
     box-shadow: 0px -20px 60px;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     z-index: 2;
     
 }
@@ -140,6 +141,7 @@ p {
     display: flex;
     flex: 1 1 auto;
     align-items: center;
+    justify-content: center;
 
 }
 
